--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,21 +21,11 @@
             style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/top_app_bar"
             app:navigationIcon="@drawable/ic_baseline_menu_24"
-            app:title="@string/page_title" />
+            app:title="@string/page_title"
+            app:titleTextColor="@color/colorTitle"/>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <!-- Scrollable content -->
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </androidx.core.widget.NestedScrollView>
 
     <!-- Cars4Sale Logo -->
     <ImageView
