--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ffccbc</color>
     <color name="colorPrimaryDark">#cb9b8c</color>
     <color name="colorAccent">#dcedc8</color>
+    <color name="colorTitle">#546e7a</color>
 </resources>
