--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,8 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" />
+
+    <style name="AppTheme.PopupOverlay" />
+
 </resources>
