--- a/app/src/main/res/layout/app_main.xml
+++ b/app/src/main/res/layout/app_main.xml
@@ -82,6 +82,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:onClick="containedButton"
         android:text="Click here to search"
         android:textAllCaps="false"
         android:textColor="@color/colorTitle"
