--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="58dp"
         android:layout_marginRight="58dp"
+        android:onClick="SearchdButton"
         android:text="Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/t_text"
