--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -29,41 +29,22 @@
 
     <Button
             android:id="@+id/b_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="79dp"
+            android:layout_height="39dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="150dp"
             android:layout_marginEnd="312dp"
             android:layout_marginRight="312dp"
-            android:layout_marginBottom="680dp"
             android:text="Back"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-            android:id="@+id/b_button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="249dp"
-            android:layout_marginLeft="249dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="681dp"
-            android:text="Search"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/b_button"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.243"
+            app:layout_constraintBottom_toTopOf="@+id/lv" android:layout_marginTop="70dp"/>
     <ListView
             android:id="@+id/lv"
-            android:layout_width="395dp"
-            android:layout_height="651dp"
+            android:layout_width="396dp"
+            android:layout_height="580dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginEnd="5dp"
@@ -71,23 +52,22 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.963" android:layout_marginTop="25dp"/>
+            app:layout_constraintTop_toTopOf="@+id/appBarLayout"
+            app:layout_constraintVertical_bias="0.963"/>
     <EditText
             android:id="@+id/t_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_width="309dp"
+            android:layout_height="41dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginLeft="96dp"
             android:layout_marginBottom="27dp"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/lv"
-            app:layout_constraintEnd_toStartOf="@+id/b_button2"
             app:layout_constraintStart_toEndOf="@+id/b_button"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.923"
+            android:layout_marginTop="70dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
