--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Settings of LinearLayout and Orientation -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityWeb">
+    tools:context=".ActivityWeb"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="16dp">
 
     <!-- Top app bar - Material Design -->
     <com.google.android.material.appbar.AppBarLayout
@@ -19,55 +23,19 @@
         <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="match_parent"
                 app:navigationIcon="@drawable/ic_baseline_menu_24"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:title="@string/page_title"
                 app:titleTextColor="@color/colorTitle"/>
+        <TextView
+                android:text="ListView_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                android:textsize="32sp"
+                android:layout_marginBottom="5dp"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
-            android:id="@+id/b_button"
-            android:layout_width="79dp"
-            android:layout_height="39dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginEnd="312dp"
-            android:layout_marginRight="312dp"
-            android:text="Back"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.243"
-            app:layout_constraintBottom_toTopOf="@+id/lv" android:layout_marginTop="70dp"/>
-    <ListView
-            android:id="@+id/lv"
-            android:layout_width="396dp"
-            android:layout_height="580dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/appBarLayout"
-            app:layout_constraintVertical_bias="0.963"/>
-    <EditText
-            android:id="@+id/t_text"
-            android:layout_width="309dp"
-            android:layout_height="41dp"
-            android:layout_marginStart="96dp"
-            android:layout_marginLeft="96dp"
-            android:layout_marginBottom="27dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@+id/lv"
-            app:layout_constraintStart_toEndOf="@+id/b_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.923"
-            android:layout_marginTop="70dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
