--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -12,10 +12,14 @@
 
     <TextView
             android:text="ListView_1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:textsize="32sp"
             android:layout_marginBottom="5dp"/>
+    <ListView
+            android:id="@+id/lvCars"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
