Added OnItemClickListener on Listview

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -11,15 +11,13 @@
     android:padding="16dp">
 
     <TextView
-            android:text="ListView_1"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textsize="32sp"
+            android:text="Simple ListView"
             android:layout_marginBottom="5dp"/>
     <ListView
-            android:id="@+id/lvCars"
+            android:id="@+id/lvMonth"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
 </LinearLayout>
