Supported different sizes on activity_web (Advanced Feature)

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -14,10 +14,14 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Simple ListView"
+            android:text="Cars Info"
             android:layout_marginBottom="5dp"/>
     <ListView
             android:id="@+id/lvMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="636dp"/>
+    <Button
+            android:text="Button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" android:id="@+id/button2"/>
 </LinearLayout>
