--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -17,11 +17,11 @@
             android:text="Cars Info"
             android:layout_marginBottom="5dp"/>
     <ListView
-            android:id="@+id/lvMonth"
+            android:id="@+id/lvCars2"
             android:layout_width="wrap_content"
             android:layout_height="636dp"/>
     <Button
-            android:text="Button"
+            android:text="Back"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/button2"/>
 </LinearLayout>
