--- a/app/src/main/res/layout/activity_web2.xml
+++ b/app/src/main/res/layout/activity_web2.xml
@@ -1,7 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ActivityWeb2"/>
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".ActivityWeb"
+              android:orientation="vertical"
+              android:gravity="center"
+              android:padding="16dp">
+
+    <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cars Details"
+            android:layout_marginBottom="5dp"/>
+    <ListView
+            android:id="@+id/lvCars2"
+            android:layout_width="wrap_content"
+            android:layout_height="636dp"/>
+    <Button
+            android:text="Back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/button2"/>
+</LinearLayout>
+
+
+
