--- a/app/src/main/res/layout/app_main.xml
+++ b/app/src/main/res/layout/app_main.xml
@@ -5,7 +5,9 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:layout_gravity="center">
 
     <!-- Top app bar - Material Design -->
     <com.google.android.material.appbar.AppBarLayout
