Redesigned ListView on ActivityWeb

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -10,18 +10,8 @@
     android:gravity="center"
     android:padding="16dp">
 
-    <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cars Info"
-            android:layout_marginBottom="5dp"/>
     <ListView
-            android:id="@+id/lvMonth"
-            android:layout_width="wrap_content"
-            android:layout_height="636dp"/>
-    <Button
-            android:text="Back"
+            android:id="@+id/lvCar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/button2"/>
+            android:layout_height="match_parent"/>
 </LinearLayout>
