--- a/app/src/main/res/layout/activity_web2.xml
+++ b/app/src/main/res/layout/activity_web2.xml
@@ -15,14 +15,10 @@
             android:layout_height="wrap_content"
             android:text="Cars Details"
             android:layout_marginBottom="5dp"/>
-    <ListView
-            android:id="@+id/lvCars2"
-            android:layout_width="wrap_content"
-            android:layout_height="636dp"/>
     <Button
-            android:text="Back"
+            android:text="Button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/button2"/>
+            android:layout_height="wrap_content" android:id="@+id/button2"/>
 </LinearLayout>
 
 
