UI of ActivityWeb2 Done(Advanced Feature)

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -15,5 +15,5 @@
             android:layout_height="wrap_content" android:id="@+id/button_a"/>
     <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/lvCar"/>
+            android:layout_height="match_parent" android:id="@+id/lvCar2"/>
 </LinearLayout>
