--- a/app/src/main/res/layout/activity_web2.xml
+++ b/app/src/main/res/layout/activity_web2.xml
@@ -9,16 +9,13 @@
               android:gravity="center"
               android:padding="16dp">
 
-    <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cars Details"
-            android:layout_marginBottom="5dp"/>
     <Button
-            android:text="Button"
+            android:text="BACK"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/button2"/>
+            android:layout_height="wrap_content" android:id="@+id/button_b"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/lvCar2"/>
 </LinearLayout>
 
 
