--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -16,4 +16,11 @@
     <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/lvCar2"/>
+    <TextView
+            android:text="TextView01"
+            android:layout_height="wrap_content"
+            android:textSize="20dip"
+            android:layout_width="fill_parent"
+            android:id="@+id/CarName"
+    />
 </LinearLayout>
