UI of Activities(Done)

--- a/app/src/main/res/layout/activity_web2.xml
+++ b/app/src/main/res/layout/activity_web2.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content" android:id="@+id/button_b"/>
     <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/lvCar2"/>
+            android:layout_height="match_parent" android:id="@+id/lvCar"/>
 </LinearLayout>
 
 
