--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,26 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Settings of LinearLayout -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ActivityWeb"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="16dp">
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:weightSum="100">
+
+    <TextView
+            android:gravity="center"
+            android:textAlignment="center"
+            android:text="TextView1"
+            android:layout_height="60dp"
+            android:layout_weight="50"
+            android:layout_width="match_parent"
+            android:id="@+id/textView1"/>
+
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:layout_width="match_parent">
+
+        <TextView
+                android:layout_gravity="center"
+                android:layout_height="30dp"
+                android:layout_width="match_parent"
+                android:text="TextView2"
+                android:id="@+id/textView2"/>
+
+
+        <TextView
+                android:layout_gravity="center"
+                android:layout_height="30dp"
+                android:layout_width="match_parent"
+                android:id="@+id/textView3"
+                android:text="TextView3"
+                android:layout_below="@+id/text2"/>
+
+    </LinearLayout>
+
     <Button
             android:text="BACK"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/button_a"/>
-    <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/lvCar"/>
-    <TextView
-            android:text="TextView01"
-            android:layout_height="wrap_content"
-            android:textSize="20dip"
-            android:layout_width="fill_parent"
-            android:id="@+id/CarName"
-    />
+
+
 </LinearLayout>
