--- a/app/src/main/res/layout/activity_web2.xml
+++ b/app/src/main/res/layout/activity_web2.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".ActivityWeb"
-              android:orientation="vertical"
-              android:gravity="center"
-              android:padding="16dp">
-
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".ActivityWeb2">
     <Button
             android:text="BACK"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/button_b"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button_b"/>
     <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" android:id="@+id/lvCar"/>
-</LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="681dp"
+            android:id="@+id/lvCar2" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_b"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
