--- a/app/src/main/res/layout/activity_help_screen.xml
+++ b/app/src/main/res/layout/activity_help_screen.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".HelpScreenActivity">
 
+    <Button
+            android:text="BACK"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" android:id="@+id/button_d"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
