--- a/app/src/main/res/layout-land/nav_header.xml
+++ b/app/src/main/res/layout-land/nav_header.xml
@@ -12,7 +12,7 @@
 
     <!-- Image: Cars4Sale logo  -->
     <ImageView
-        android:id="@+id/nav_header_image"
+        android:id="@+id/detail_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:contentDescription="nav_header"
