--- a/app/src/main/res/layout-land/detail_main.xml
+++ b/app/src/main/res/layout-land/detail_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_baseline_menu_24"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/page_title"
+            app:title="@string/page_title_detail"
             app:titleTextColor="@color/colorTitle" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -59,7 +59,7 @@
             android:layout_gravity="center"
             android:text="TextView"
             android:textColor="@color/colorGradient1"
-            android:textSize="30"
+            android:textSize="30dp"
             android:textStyle="bold" />
 
         <TextView
